vscode-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vscode-svc
  namespace: homeassistant
spec:
  selector:
    app: vscode-server
  ports:
    - name: http
      port: 8080
      protocol: TCP
