vscode-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-ingress
  namespace: homeassistant
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - code.jarvis-home.dev
      secretName: vscode-tls
  rules:
    - host: code.jarvis-home.dev
      http:
        paths:
          - backend:
              service:
                name: vscode-svc
                port:
                  number: 8080
            pathType: Prefix
            path: /
