vscode-server/vscode-route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vscode-route
  namespace: homeassistant
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
    - name: tailscale-gateway
      namespace: tailscale
  hostnames:
    - code.jarvis-home.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vscode-svc
          port: 8080
